--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.4",
+        "maatwebsite/excel": "^3.1",
         "php-open-source-saver/jwt-auth": "^2.1",
         "pusher/pusher-php-server": "^7.2",
         "realrashid/sweet-alert": "^7.1",
